--- a/css/rtl.css
+++ b/css/rtl.css
@@ -7,7 +7,7 @@ body {
   text-align: right;
   background-color: rgba(33, 20, 95, 0.05);
   background-image: url(../images/Background.png);
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
   /* height: 100vh; */
   /* background-size: cover; */
 }
@@ -65,6 +65,10 @@ h6,
 h2,
 .h2 {
   font-size: 24px;
+}
+/* slider */
+.slick-slider.custom-slider-03 .box {
+  padding: 0 25px;
 }
 
 /* topbar */
@@ -218,13 +222,16 @@ h2,
 .work-prog-span {
   font-size: 14px !important;
 }
+.main-heading {
+  padding-right: 1rem;
+}
 .main-heading > span {
   position: absolute;
   background: rgba(6, 190, 145, 1);
-  width: 0.7%;
+  width: 5px;
   height: 100%;
   border-radius: 50px;
-  right: -1.3%;
+  right: 0;
 }
 /* cards */
 .small-card {
